[package]
name = "rust_bq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

